+ fixed background image jumping on mobile when navigation hides/shows + fixed bottom half of home screen preventing swipe.

--- a/src/app/background/background.component.scss
+++ b/src/app/background/background.component.scss
@@ -5,8 +5,9 @@ img {
 
 .background {
     position: fixed;
-    top: 0;
-    height: 100%;
+    bottom: 0;
+    height: 100vh;
+    min-height: 100%;
     width: auto;
     opacity: 0.35;
     pointer-events: none;
