--- a/src/app/page/page.component.scss
+++ b/src/app/page/page.component.scss
@@ -1,3 +1,4 @@
 .page_container {
     overflow-y: auto;
+    height: 100vh;
 }
